Add Online sensor and linting

--- a/custom_components/senz/manifest.json
+++ b/custom_components/senz/manifest.json
@@ -2,7 +2,8 @@
   "domain": "senz",
   "name": "SENZ WiFi",
   "config_flow": true,
-  "documentation": "https://www.home-assistant.io/integrations/senz",
+  "documentation": "https://github.com/astrandb/senz_hass",
+  "issue-tracker": "https://github.com/astrandb/senz_hass/issues",
   "requirements": [],
   "ssdp": [],
   "zeroconf": [],
