--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -21,7 +21,9 @@ change-template: "- $TITLE @$AUTHOR (#$NUMBER)"
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 
 template: |
-  ## Changes
+[![Downloads for this release](https://img.shields.io/github/downloads/astrandb/senz_hass/$RESOLVED_VERSION/total.svg)](https://github.com/astrandb/senz_hass/releases/$RESOLVED_VERSION)
+
+## Changes
 
   $CHANGES
 
