--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -26,7 +26,9 @@ change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add
 template: |
   [![Downloads for this release](https://img.shields.io/github/downloads/astrandb/senz_hass/v$RESOLVED_VERSION/total.svg)](https://github.com/astrandb/senz_hass/releases/v$RESOLVED_VERSION)
 
-  ## Changes
+### Don't forget to run `make lint` and `make bump` before releasing new version
+
+## Changes
 
   $CHANGES
 
